# multi-agent-code-review

./: .gitignore  README.md  pyproject.toml  sample_bad_code.py
.github/workflows/: self-test.yml
eval/cases/: apache_airflow_53597.json  apache_airflow_59643.json  apache_airflow_63530.json  apache_airflow_6654.json  django_django_17583.json  django_django_17730.json  django_django_18433.json  django_django_21426.json  django_django_21438.json  django_django_21448.json  encode_httpx_1349.json  encode_httpx_1469.json  encode_httpx_2911.json  encode_httpx_3460.json  encode_httpx_780.json  home-assistant_core_88276.json  pydantic_pydantic_2532.json  pydantic_pydantic_2536.json  pydantic_pydantic_3542.json  scikit-learn_scikit-learn_23299.json  scikit-learn_scikit-learn_33787.json
eval/results/: adjudication.json  adjudication_anthropic.json  adjudication_openai.json  disagreement_report.md  finding_verdicts.json  metrics_report.md  metrics_report_anthropic.md  metrics_report_openai.md  raw_run.json  raw_run_anthropic.json  raw_run_openai.json
scripts/: adjudicate_findings.py  fetch_eval_pr.py  run_eval_raw.py  score_eval.py  try_graph.py  try_security_agent.py
tests/: test_cap_filter.py  test_cli.py  test_coverage_agent.py  test_dedupe_filter.py  test_diff.py  test_eval_fetch.py  test_eval_schema.py  test_eval_store.py  test_filter_pipeline.py  test_github_client.py  test_graph.py  test_llm_client.py  test_maintainability_agent.py  test_placeholder_filter.py  test_schemas.py  test_scope_filter.py  test_security_agent.py  test_synthesizer.py
(+22 files in other folders)
