[project]
name = "multi-agent-code-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ameeta", email = "contact.ameeta@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.10.0",
    "langgraph>=1.0.10",
    "pydantic>=2.13.4",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "unidiff>=0.7.5",
]

[project.scripts]
multi-agent-code-review = "multi_agent_code_review.cli:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
